--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -1,12 +1,17 @@
 @import "../../App.scss";
 
+.test4 {
+  position: fixed;
+  width: 99%;
+}
+
 header {
   padding: 20px;
   background-color: $nodle-black-800;
   border-radius: 10px;
-  position: fixed;
-  top: 10px;
-  right: 10px;
+  position: absolute;
+  top: 0;
+  // right: -320px;
   width: 82%; 
   
   h1 {
