--- a/client/src/components/RightSidebar/RightSidebar.module.scss
+++ b/client/src/components/RightSidebar/RightSidebar.module.scss
@@ -9,10 +9,10 @@
     padding-top: 20px;
     background-color: $nodle-black-800;
     border-radius: 10px;
-    border: 1px solid $nodle-black-500;
+    // border: 1px solid $nodle-black-500;
     
     position: fixed;  
-    top: 169px;
+    top: 180px;
     right: -123px;
     transition: 1.5s;
       
