--- a/client/src/pages/ChatPage/ChatPage.module.scss
+++ b/client/src/pages/ChatPage/ChatPage.module.scss
@@ -1,49 +1,346 @@
 @import "../../App.scss";
 
 
-.ChatPage {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1.5rem;
-  background-color: $nodle-black-700; // from App.scss
-  border-radius: $border-radius-medium; // Assuming you have a border-radius variable
-  box-shadow: $shadow-color;
-  max-width: 600px;
-  margin: 0 auto;
-}
+// .ChatPage {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 1rem;
+//   padding: 1.5rem;
+//   background-color: $nodle-black-700; // from App.scss
+//   border-radius: $border-radius-medium; // Assuming you have a border-radius variable
+//   box-shadow: $shadow-color;
+//   max-width: 600px;
+//   margin: 0 auto;
+// }
 
-.chatMessage {
-  background-color: $nodle-black-600; // lighter background for individual messages
-  padding: 1rem;
-  border-radius: $border-radius-medium;
-  box-shadow: $shadow-color; // assuming you have different levels of shadows
-  transition: background-color 0.3s ease;
+// .chatMessage {
+//   background-color: $nodle-black-600; // lighter background for individual messages
+//   padding: 1rem;
+//   border-radius: $border-radius-medium;
+//   box-shadow: $shadow-color; // assuming you have different levels of shadows
+//   transition: background-color 0.3s ease;
   
-  &:hover {
-    border: 1px solid $border-color-yellow; // color on hover
-  }
+//   &:hover {
+//     border: 1px solid $border-color-yellow; // color on hover
+//   }
+// }
+
+// .messageHeader {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   margin-bottom: 0.5rem;
+// }
+
+// .userName {
+//   font-weight: bold;
+//   color: $nodle-black-300; // main text color from App.scss
+// }
+
+// .messageDate {
+//   font-size: 0.85rem;
+//   color: $nodle-black-200; // lighter color for dates
+// }
+
+// .messageText {
+//   font-size: 1rem;
+//   color: $nodle-black-300;
+//   line-height: 1.5;
+// }
+// body {
+//   padding: 5%;
+//   background-color:#000;
+// }
+
+.container {
+  width: auto;
+  padding:0;
+  background-color:$nodle-black-700; 
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  height: 700px;
 }
 
-.messageHeader {
-  display: flex;
-  justify-content: space-between;
+/* === CONVERSATIONS === */
+
+.discussions {
+  width: 35%;
+  height: 700px;
+  border: 1px solid $border-color-blue;
+  border-radius: 10px;
+  box-shadow: 0px 8px 10px rgba(0,0,0,0.20);
+  overflow: hidden;
+  background-color:$nodle-black-700;
+  display: inline-block;
+}
+
+.discussions .discussion {
+  width: 100%;
+  height: 90px;
+  background-color: $nodle-black-600;
+  border-bottom: solid 1px $nodle-black-500;
+  display:flex;
   align-items: center;
-  margin-bottom: 0.5rem;
+  cursor: pointer;
 }
 
-.userName {
-  font-weight: bold;
-  color: $nodle-black-300; // main text color from App.scss
+.discussions .search {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  color: #E0E0E0;
 }
 
-.messageDate {
-  font-size: 0.85rem;
-  color: $nodle-black-200; // lighter color for dates
+.discussions .search .searchbar {
+  height: 40px;
+  background-color: $nodle-black-500;
+  width: 70%;
+  padding: 0 20px;
+  border-radius: 50px;
+  border: 1px solid $nodle-black-600;
+  display:flex;
+  align-items: center;
+  cursor: pointer;
 }
 
-.messageText {
-  font-size: 1rem;
-  color: $nodle-black-300;
-  line-height: 1.5;
+.discussions .search .searchbar input {
+  margin-left: 15px;
+  height:38px;
+  width:100%;
+  border:none;
+  color: $nodle-black-100;
+  background-color: transparent;
+  font-family: 'Montserrat', sans-serif;;
+}
+
+.discussions .search .searchbar *::-webkit-input-placeholder {
+    color:$nodle-black-200; 
+}
+.discussions .search .searchbar input *:-moz-placeholder {
+    color: $nodle-black-200; 
+}
+.discussions .search .searchbar input *::-moz-placeholder {
+    color:$nodle-black-200; 
+}
+.discussions .search .searchbar input *:-ms-input-placeholder {
+    color: $nodle-black-200; 
+}
+
+.discussions .message-active {
+  width: 98.5%;
+  height: 90px;
+  background-color: $nodle-black-600; // Active message background
+  border-bottom: solid 1px $nodle-black-500;
+}
+
+.discussions .discussion .photo {
+    margin-left:20px;
+    display: block;
+    width: 45px;
+    height: 45px;
+    background: #E6E7ED;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.online {
+  position: relative;
+  top: 30px;
+  left: 35px;
+  width: 13px;
+  height: 13px;
+  background-color: #8BC34A;
+  border-radius: 13px;
+  border: 3px solid $nodle-black-800;
+}
+
+.desc-contact {
+  height: 43px;
+  width:50%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.discussions .discussion .name {
+  margin: 0 0 0 20px;
+  font-family:'Montserrat', sans-serif;
+  font-size: 11pt;
+  color:$nodle-black-100;
+}
+
+.discussions .discussion .message {
+  margin: 6px 0 0 20px;
+  font-family:'Montserrat', sans-serif;
+  font-size: 9pt;
+  color: $nodle-black-100;
+}
+
+.timer {
+  margin-left: 15%;
+  font-family:'Open Sans', sans-serif;
+  font-size: 11px;
+  padding: 3px 8px;
+  color: $nodle-black-100; // Light color for timer
+  background-color: $nodle-black-500; // Dark background for timer
+  border: 1px solid $nodle-black-700; // Dark border
+  border-radius: 15px;
+}
+
+.chat {
+  width: calc(65% - 85px);
+}
+
+.header-chat {
+  background-color: red;
+  // background-color: $nodle-black-700; 
+  height: 90px;
+  box-shadow: 0px 3px 2px rgba(0,0,0,0.100);
+  display:flex;
+  align-items: center;
+}
+
+.chat .header-chat .icon {
+  margin-left: 30px;
+  color:$nodle-black-100;
+  font-size: 14pt;
+}
+
+.chat .header-chat .name {
+  margin: 0 0 0 20px;
+  text-transform: uppercase;
+  font-family:'Montserrat', sans-serif;
+  font-size: 13pt;
+  color:$nodle-black-100;
+}
+
+.chat .header-chat .right {
+  position: absolute;
+  right: 40px;
+}
+
+.chat .messages-chat {
+  padding: 25px 35px;
+}
+
+.chat .messages-chat .message {
+  display:flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.chat .messages-chat .message .photo {
+    display: block;
+    width: 45px;
+    height: 45px;
+    background: #E6E7ED;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.chat .messages-chat .text {
+  margin: 0 35px;
+  background-color: $nodle-black-600;
+  padding: 15px;
+  border-radius: 12px;
+}
+
+.text-only {
+  margin-left: 45px;
+}
+
+.time {
+  font-size: 10px;
+  color:lightgrey;
+  margin-bottom:10px;
+  margin-left: 85px;
+}
+
+.response-time {
+  float: right;
+  margin-right: 40px !important;
+}
+
+.response {
+  float: right;
+  margin-right: 0px !important;
+  margin-left:auto; /* flexbox alignment rule */
+}
+
+.response .text {
+  background-color: #e3effd !important;
+}
+
+.footer-chat {
+  width: calc(65% - 66px);
+  height: 80px;
+  display:flex;
+  align-items: center;
+  position:absolute;
+  bottom: 0;
+  background-color: transparent;
+  border-top: 2px solid #EEE;
+  
+}
+
+.chat .footer-chat .icon {
+  margin-left: 30px;
+  color:#C0C0C0;
+  font-size: 14pt;
+}
+
+.chat .footer-chat .send {
+  color:#fff;
+  background-color: #4f6ebd;
+  position: absolute;
+  right: 50px;
+  padding: 12px 12px 12px 12px;
+  border-radius: 50px;
+  font-size: 14pt;
+}
+
+.chat .footer-chat .name {
+  margin: 0 0 0 20px;
+  text-transform: uppercase;
+  font-family:'Montserrat', sans-serif;
+  font-size: 13pt;
+  color:#515151;
+}
+
+.chat .footer-chat .right {
+  position: absolute;
+  right: 40px;
+}
+
+.write-message {
+  border:none !important;
+  width:60%;
+  height: 50px;
+  margin-left: 20px;
+  padding: 10px;
+}
+
+.footer-chat *::-webkit-input-placeholder {
+  color: #C0C0C0;
+  font-size: 13pt;
+}
+.footer-chat input *:-moz-placeholder {
+  color: #C0C0C0;
+  font-size: 13pt;
+}
+.footer-chat input *::-moz-placeholder {
+  color: #C0C0C0;
+  font-size: 13pt;
+  margin-left:5px;
+}
+.footer-chat input *:-ms-input-placeholder {
+  color: #C0C0C0;
+  font-size: 13pt;
+}
+
+.clickable {
+  cursor: pointer;
 }
