--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -1,18 +1,20 @@
 @import "../../App.scss";
 
-.test4 {
+.headerBox {
   position: fixed;
-  width: 99%;
+  width: 85%;  
+  border-radius: 10px;
+  overflow: hidden;
+  padding-right: 5px;
 }
 
 header {
   padding: 20px;
-  background-color: $nodle-black-800;
-  border-radius: 10px;
+  background-color: $nodle-black-800; 
   position: absolute;
   top: 0;
   // right: -320px;
-  width: 82%; 
+  width: 100%;  
   
   h1 {
     color: $nodle-black-0;
@@ -61,155 +63,23 @@ header {
   }
 }
 
-.skyContainer {
-  width: 100vw;
-  height: 100vh;
-  transform: rotateZ(45deg);
-  position: fixed; 
-  top: -50px; // Початок зірок вище вікна
-}
-
-// Залишаємо існуючий стиль для зірок
-.star {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: 1px;
-  background: linear-gradient(-45deg, #5f91ff, rgba(0, 0, 255, 0));
-  filter: drop-shadow(0 0 5px #2557bb);
-  animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
-}
-
-.star::before, .star::after {
-  position: absolute;
-  content: '';
-  top: calc(100% - 1px);
-  right: 0;
-  height: 2px;
-  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
-  border-radius: 100%;
-  transform: translateX(50%) rotateZ(45deg);
-  animation: shining 3000ms ease-in-out infinite;
-}
-
-.star::after {
-  transform: translateX(50%) rotateZ(-45deg);
-}
-
-/* Позиції зірок */
-.star:nth-child(1) {
-  top: calc(10% - 100px);
-  left: calc(80% - 300px);
-  animation-delay: 1650ms;
-}
-
-.star:nth-child(2) {
-  top: calc(20% - -50px);
-  left: calc(60% - 190px);
-  animation-delay: 350ms;
-}
-
-.star:nth-child(3) {
-  top: calc(30% - -90px);
-  left: calc(30% - 200px);
-  animation-delay: 400ms;
-}
-
-.star:nth-child(4) {
-  top: calc(40% - 50px);
-  left: calc(30% - 250px);
-  animation-delay: 4700ms;
-}
-
-.star:nth-child(5) {
-  top: calc(50% - -190px);
-  left: calc(16% - 200px);
-  animation-delay: 2100ms;
-}
-
-/* Нові зірки */
-.star:nth-child(6) {
-  top: calc(60% - 20px);
-  left: calc(10% - 50px);
-  animation-delay: 1500ms;
-}
-
-.star:nth-child(7) {
-  top: calc(70% - 40px);
-  left: calc(20% - 100px);
-  animation-delay: 800ms;
-}
-
-.star:nth-child(8) {
-  top: calc(80% - 60px);
-  left: calc(30% - 150px);
-  animation-delay: 2000ms;
-}
-
-.star:nth-child(9) {
-  top: calc(90% - 80px);
-  left: calc(40% - 200px);
-  animation-delay: 300ms;
-}
-
-.star:nth-child(10) {
-  top: calc(100% - 100px);
-  left: calc(50% - 250px);
-  animation-delay: 600ms;
-}
-
-/* Animations */
-@keyframes tail {
-  0% {
-    width: 0;
-  }
-  
-  30% {
-    width: 100px;
-  }
-  
-  100% {
-    width: 0;
-  }
-}
-
-@keyframes shining {
-  0% {
-    width: 0;
-  }
-  50% {
-    width: 30px;
-  }
-  100% {
-    width: 0;
-  }
-}
-
-@keyframes shooting {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(320px);
-  }
-}
-
-// .sky-container {  
-//   width: 100vh;
+// .skyContainer {
+//   width: 100vw;
 //   height: 100vh;
 //   transform: rotateZ(45deg);
-//   position: absolute;
-//   z-index: 960;
+//   position: fixed; 
+//   top: -50px; // Початок зірок вище вікна
 // }
 
+// // Залишаємо існуючий стиль для зірок
 // .star {
 //   position: absolute;
-//   top: 0;
-//   left: 0;
+//   top: 50%;
+//   left: 50%;
 //   height: 1px;
 //   background: linear-gradient(-45deg, #5f91ff, rgba(0, 0, 255, 0));
 //   filter: drop-shadow(0 0 5px #2557bb);
-//   animation: tail 6000ms ease-in-out infinite, shooting 6000ms ease-in-out infinite; /* Збільшено до 6000мс */
+//   animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
 // }
 
 // .star::before, .star::after {
@@ -221,103 +91,73 @@ header {
 //   background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
 //   border-radius: 100%;
 //   transform: translateX(50%) rotateZ(45deg);
-//   animation: shining 8000ms ease-in-out infinite; /* Теж уповільнено до 6000мс */
+//   animation: shining 3000ms ease-in-out infinite;
 // }
 
 // .star::after {
 //   transform: translateX(50%) rotateZ(-45deg);
 // }
 
-// /* Стилі для кожної зірки */
+// /* Позиції зірок */
 // .star:nth-child(1) {
-//   top: calc(40% - 100px);
+//   top: calc(10% - 100px);
 //   left: calc(80% - 300px);
-//   animation-delay: 1650ms;
-// }
-// .star:nth-child(1)::before, .star:nth-child(1)::after {
 //   animation-delay: 1650ms;
 // }
 
 // .star:nth-child(2) {
-//   top: calc(60% - -50px);
+//   top: calc(20% - -50px);
 //   left: calc(60% - 190px);
-//   animation-delay: 350ms;
-// }
-// .star:nth-child(2)::before, .star:nth-child(2)::after {
 //   animation-delay: 350ms;
 // }
 
 // .star:nth-child(3) {
-//   top: calc(45% - -90px);
+//   top: calc(30% - -90px);
 //   left: calc(30% - 200px);
-//   animation-delay: 400ms;
-// }
-// .star:nth-child(3)::before, .star:nth-child(3)::after {
 //   animation-delay: 400ms;
 // }
 
 // .star:nth-child(4) {
-//   top: calc(70% - 50px);
+//   top: calc(40% - 50px);
 //   left: calc(30% - 250px);
-//   animation-delay: 4700ms;
-// }
-// .star:nth-child(4)::before, .star:nth-child(4)::after {
 //   animation-delay: 4700ms;
 // }
 
 // .star:nth-child(5) {
-//   top: calc(75% - -190px);
+//   top: calc(50% - -190px);
 //   left: calc(16% - 200px);
-//   animation-delay: 2100ms;
-// }
-// .star:nth-child(5)::before, .star:nth-child(5)::after {
 //   animation-delay: 2100ms;
 // }
 
 // /* Нові зірки */
 // .star:nth-child(6) {
-//   top: calc(30% - 150px);
-//   left: calc(70% - 250px);
-//   animation-delay: 1000ms;
-// }
-// .star:nth-child(6)::before, .star:nth-child(6)::after {
-//   animation-delay: 1000ms;
+//   top: calc(60% - 20px);
+//   left: calc(10% - 50px);
+//   animation-delay: 1500ms;
 // }
 
 // .star:nth-child(7) {
-//   top: calc(65% - 90px);
-//   left: calc(40% - 180px);
-//   animation-delay: 2000ms;
-// }
-// .star:nth-child(7)::before, .star:nth-child(7)::after {
-//   animation-delay: 2000ms;
+//   top: calc(70% - 40px);
+//   left: calc(20% - 100px);
+//   animation-delay: 800ms;
 // }
 
 // .star:nth-child(8) {
-//   top: calc(55% - 70px);
-//   left: calc(50% - 250px);
-//   animation-delay: 1500ms;
-// }
-// .star:nth-child(8)::before, .star:nth-child(8)::after {
-//   animation-delay: 1500ms;
+//   top: calc(80% - 60px);
+//   left: calc(30% - 150px);
+//   animation-delay: 2000ms;
 // }
 
 // .star:nth-child(9) {
-//   top: calc(85% - 40px);
-//   left: calc(25% - 220px);
-//   animation-delay: 2700ms;
-// }
-// .star:nth-child(9)::before, .star:nth-child(9)::after {
-//   animation-delay: 2700ms;
+//   top: calc(90% - 80px);
+//   left: calc(40% - 200px);
+//   animation-delay: 300ms;
 // }
 
 // .star:nth-child(10) {
-//   top: calc(95% - 120px);
-//   left: calc(10% - 300px);
-//   animation-delay: 3200ms;
-// }
-// .star:nth-child(10)::before, .star:nth-child(10)::after {
-//   animation-delay: 3200ms;
+//   top: calc(100% - 100px);
+//   left: calc(50% - 250px);
+//   animation-delay: 600ms;
 // }
 
 // /* Animations */
@@ -349,9 +189,10 @@ header {
 
 // @keyframes shooting {
 //   0% {
-//     transform: translate(0, 0);
+//     transform: translateX(0);
 //   }
 //   100% {
-//     transform: translate(30vw, 100vh); /* Рух по діагоналі до кінця сторінки */
+//     transform: translateX(320px);
 //   }
 // }
+
