--- a/client/src/components/MainContent/MainContent.module.scss
+++ b/client/src/components/MainContent/MainContent.module.scss
@@ -20,13 +20,14 @@
     color: white;
   }
 
-  .mainFeed {
-    position: fixed;
-    // margin-top: 180px;
-    width: 71%;
+  .mainBox {
+    // position: fixed;
+    margin-top: 180px;
+    width: 85%;
     height: 100%;
-    top: 180px;
-    right: 11%;
+    padding: 0 10px;
+    // top: 180px;
+    // right: 11%;
 
     // width: 300px; /* ширина блока */
     // height: 200px; /* висота блока */
@@ -35,22 +36,22 @@
     overflow: auto;
   }
 
-  .mainFeed::-webkit-scrollbar {
+  .mainBox::-webkit-scrollbar {
     width: 8px; /* Вузький скролбар */
   }
   
-  .mainFeed::-webkit-scrollbar-track {
+  .mainBox::-webkit-scrollbar-track {
     background: #2f2f2f; /* Темний фон для скролбару */
   }
   
-  .mainFeed::-webkit-scrollbar-thumb {
+  .mainBox::-webkit-scrollbar-thumb {
     background-color: #555; /* Темніший "повзунок" */
     border-radius: 10px; /* Закруглені кути */
     border: 2px solid #2f2f2f; /* Простір між скролом і треком */
   }
   
   /* Стиль для Firefox */
-  .mainFeed {
+  .mainBox {
     scrollbar-width: thin; /* Вузький скролбар */
     scrollbar-color: #555 #2f2f2f; /* Темний повзунок і темний трек */
   }
