--- a/client/src/pages/HomePage/HomePage.module.scss
+++ b/client/src/pages/HomePage/HomePage.module.scss
@@ -1,44 +1,90 @@
 @import '../../App.scss';
 
-// .mainContent {
-//   padding: 20px;
-//   background-color: #f9f9f9;
+.newsBox {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  .newsCard {
+    display: flex;
+    gap: 20px;
+    border: 1px solid black;
+    border-radius: 10px;      
+  }
+
+  .newsImage {
+    max-width: 300px;
+    height: auto;
+    border-radius: 15px;
+  }
+ 
+  .newsContent {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 10px;
+  }
+  
+  .newsContent h2 {
+    font-size: $font-size-title;    
+    color: $border-color-yellow;
+  }  
+}
+
+.newsContent p {
+  font-size: $font-size-text;
+  color: $nodle-black-200;
+   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// ________________Код для сторінки Group________________________
+
+// .article {
+//   margin-bottom: 20px;
+//   padding: 15px;
+//   // background-color: #ffffff;
+//   color: $nodle-black-300;
+//   border-radius: 8px;
+//   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+//   background-image: url(https://pixewall.com/wp-content/uploads/2023/10/4k-Space-Wallpaper-768x432.jpg);
+//   background-size: cover;
+//   background-repeat: no-repeat;
 // }
 
-.article {
-  margin-bottom: 20px;
-  padding: 15px;
-  // background-color: #ffffff;
-  color: $nodle-black-300;
-  border-radius: 8px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  background-image: url(https://pixewall.com/wp-content/uploads/2023/10/4k-Space-Wallpaper-768x432.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+// .articleTitle {
+//   font-size: 24px;
+//   font-weight: bold;
+//   margin-bottom: 10px;
+//   color: $nodle-black-green;
+// }
 
-.articleTitle {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-  color: $nodle-black-green;
-}
+// .articleSnippet {
+//   font-size: 16px;
+//   color: #555555;
+//   margin-bottom: 15px;
+// }
 
-.articleSnippet {
-  font-size: 16px;
-  color: #555555;
-  margin-bottom: 15px;
-}
+// .articleContent {
+//   font-size: 16px;
+//   color: $nodle-black-200;
+//   margin-bottom: 10px;
+//   line-height: 25px;
+// }
 
-.articleContent {
-  font-size: 16px;
-  color: $nodle-black-200;
-  margin-bottom: 10px;
-  line-height: 25px;
-}
-
-.articleDate {
-  font-size: 14px;
-  color: #888888;
-  text-align: right;
-}
+// .articleDate {
+//   font-size: 14px;
+//   color: #888888;
+//   text-align: right;
+// }
