--- a/client/src/pages/UsersPage/UsersPage.module.scss
+++ b/client/src/pages/UsersPage/UsersPage.module.scss
@@ -1,68 +1,125 @@
-// @import '../../App.scss';
-
 .userBox {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 50px 20px;
-    padding: 0 20px;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px 20px;
+  padding: 0 20px;
+  justify-content: space-between;
 
+  .userCard {
+    position: relative;
+    min-width: 300px;
+    width: 20%;
+    height: 200px;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+    cursor: pointer;
+    &.flipped {
+      transform: rotateY(180deg);
+    }
+  }
 
-.userCard {
-  position: relative;
-  min-width: 300px;
-  width: 20%;
-  height: 200px;
-  transform-style: preserve-3d;
-  transition: transform 0.6s;
-  cursor: pointer;
-  &.flipped {
+  .front,
+  .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border: 1px solid #cababa;
+    border-radius: 20px;
+    display: flex; // Используем flex-контейнер
+    flex-direction: column; // Устанавливаем расположение в колонну
+    justify-content: center; // Центрируем элементы по вертикали
+    align-items: center; // Центрируем элементы по горизонтали
+  }
+
+  .back {
     transform: rotateY(180deg);
+    background: linear-gradient(to right, rgb(90, 91, 92), rgb(105, 105, 218));
+  }
+  .inner {
+    display: flex; // Убедимся, что внутренний контейнер также флекс-контейнер
+    flex-direction: column; // Располагаем элементы в колонну
+    align-items: center; // Центрируем элементы внутри
+    width: 100%; // Ширина на 100%
+    text-align: center; // Центрируем текст
+  }
+
+  .front .inner h2 {
+    color: grey;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+  }
+
+  .front .inner h2::after {
+    content: "";
+    width: 4rem;
+    height: 2px;
+    position: absolute;
+    background: #c6d4df;
+    display: block;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    bottom: -0.75rem;
+  }
+
+  .userPhoto {
+    width: 200px;
+    height: auto;
+  }
+  .link {
+    text-decoration: none;
+    color: #ffffff; // Цвет текста ссылки
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 12px;
+    display: inline-block;
+    transition: color 0.3s, transform 0.2s;
+
+    &:hover {
+      color: #d1c4ff; // Цвет текста ссылки при наведении
+      transform: scale(1.1);
+    }
+  }
+
+  .infoUser {
+    margin: 0; // Убираем отступы для заголовка
+  }
+
+  .clickToFlip {
+    font-size: 16px; // Размер текста для "Click to flip back"
+    margin-top: 10px;
+    font-weight: 300;
+    color: #c0c0c0; // Цвет текста
+    transition: color 0.3s;
+
+    &:hover {
+      color: #ffffff; // Цвет текста при наведении
+    }
   }
 }
-
-.front,
-.back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border: 1px solid #cababa;
+.searchContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
-  border-radius: 20px;
+  margin: 20px 0;
 }
 
-.back {
-  transform: rotateY(180deg);
-  background: linear-gradient(to right, rgb(90, 91, 92), rgb(105, 105, 218));
-}
+.searchInput {
+  width: 50%;
+  padding: 10px;
+  border-radius: 25px;
+  border: 1px solid #cababa;
+  background-color: #363A3D;
+  outline: none;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-.front .inner h2 {
-  color: grey;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-weight: 300;
-  font-size: 18px;
-}
-
-.front .inner h2::after {
-  content: "";
-  width: 4rem;
-  height: 2px;
-  position: absolute;
-  background: #c6d4df;
-  display: block;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  bottom: -0.75rem;
-}
-
-.userPhoto {
-  width: 200px;
-  height: auto;
-}
+  &:focus {
+    border-color: #6a5acd;
+    box-shadow: 0 2px 8px rgba(106, 90, 205, 0.3);
+  }
 }
 
 
