--- a/client/src/pages/ChatPage/NewMessageForm/NewMessageForm.module.scss
+++ b/client/src/pages/ChatPage/NewMessageForm/NewMessageForm.module.scss
@@ -9,6 +9,11 @@
     display:flex;
     align-items: center;
     margin-bottom: 8px;
+
+    &.textOnly { // Style for messages without photo
+      justify-content: flex-end;
+    }
+  
   }
   
 .messagesChat .message .photo {
@@ -20,6 +25,19 @@
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
+      position: relative;
+
+      .online {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        width: 10px;
+        height: 10px;
+        background-color: #4CAF50;
+        border-radius: 50%;
+        border: 2px solid #E6E7ED;
+      }
+
   }
   
 .messagesChat .text {
@@ -27,6 +45,14 @@
     background-color: $nodle-black-600;
     padding: 15px;
     border-radius: 12px;
+    font-size: 10pt;
+    max-width: 60%;
+  }
+
+  .messagesChat .responseTime {
+    font-size: 0.8rem;
+    color: #aaa;
+    margin-left: 5px; // Space between message and time
   }
 
   .form {
