--- a/client/src/pages/ChatPage/ChatPage.module.scss
+++ b/client/src/pages/ChatPage/ChatPage.module.scss
@@ -2,6 +2,9 @@
 
 #particles-js {
   position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
 }
@@ -149,16 +152,10 @@
   border-radius: 10px;
   background-color: $nodle-black-700;
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.20);
+  position: relative; 
 }
 
 .headerChat {
-  // background-color: red;
-  // // background-color: $nodle-black-700; 
-  // height: 90px;
-  // box-shadow: 0px 3px 2px rgba(0,0,0,0.100);
-  // display:flex;
-  // align-items: center;
-
   background-color: $nodle-black-700;
   color: $nodle-black-100;
   display: flex;
@@ -226,4 +223,88 @@
 .messageItem p {
   margin: 0;
   display: inline;
+}
+
+
+
+// === Tablet Styles (768px - 1024px) ===
+@media (max-width: 1024px) {
+  .container {
+    height: auto;
+    padding: 10px;
+  }
+
+  .discussions {
+    width: 100%;
+    height: 500px;
+    margin-bottom: 20px;
+  }
+
+  .chat {
+    width: 100%;
+    height: 500px;
+  }
+
+  .headerChat {
+    padding: 0 10px;
+  }
+
+  .headerChat .name {
+    font-size: 12pt;
+  }
+
+  .headerChat .icon {
+    font-size: 12pt;
+    margin-left: 15px;
+  }
+}
+
+// === iPhone Styles (max-width: 767px) ===
+@media (max-width: 767px) {
+  .container {
+    height: auto;
+    padding: 10px;
+    box-shadow: none;
+  }
+
+  .discussions {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 15px;
+  }
+
+  .discussions .discussion {
+    height: 70px;
+  }
+
+  .discussions .search .searchbar {
+    width: 90%;
+  }
+
+  .chat {
+    width: 100%;
+    height: 300px;
+  }
+
+  .headerChat {
+    padding: 0 10px;
+    height: 70px;
+  }
+
+  .headerChat .name {
+    font-size: 10pt;
+  }
+
+  .headerChat .icon {
+    font-size: 10pt;
+  }
+
+  .messagesHistory {
+    padding: 10px;
+  }
+
+  .messageItem {
+    font-size: 9pt;
+    padding: 8px;
+  }
 }
