--- a/client/src/components/LeftSidebar/LeftSidebar.module.scss
+++ b/client/src/components/LeftSidebar/LeftSidebar.module.scss
@@ -98,4 +98,18 @@
       background-position: center;
     }
   }
+  .gamesLink {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    margin-top: 50px;
+  }
+  
+  .gamesLink a { /* Додаємо правило для всіх посилань всередині .gamesLink */
+    text-decoration: none; /* Прибирає підкреслення */
+    color: green; /* Задає колір тексту */
+    font-size: 24px; /* Задає розмір шрифту */
+    font-weight: 600; /* Задає вагу шрифту */
+  }
 }
